Fixed: The issue of the tab-bar display on mobile.

--- a/src/scss/_compontents/_partial/_nav.scss
+++ b/src/scss/_compontents/_partial/_nav.scss
@@ -91,6 +91,9 @@
       color: white;
     }
   }
+  &.no-visible {
+    display: none;
+  }
 }
 // page-nav
 .cxo-page-nav {
